Fix border radius on firefox

--- a/src/components/progressBar/style.scss
+++ b/src/components/progressBar/style.scss
@@ -26,7 +26,7 @@
         height: 60px;
         width: 60px;
         text-align: center;
-        border-radius: 9999999999px;
+        border-radius: 50%;
         margin-bottom: 10px;
 
         span {
